# parser

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.dockerfile  celeryworker.dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  server.py
app/: app.py  config.py  crud.py  index.html  main.py  models.py  session.py  tasks.py  worker.py
app/api/: endpoints.py  session.py
app/worker/: celery_app.py  celery_worker.py  tasks.py
migrations/: env.py
migrations/versions/: 2021-05-16_ec26d66a706f_init_db.py  2021-05-19_d876d48571c6_remove_results_length.py
