[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Petr <petrmixayloff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
requests = "^2.25.1"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.2"
SQLAlchemy = "^1.4.15"
lxml = "^4.6.3"
bs4 = "^0.0.1"
celery = "^5.0.5"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
